# replit_rtp_standalone

./: .gitignore  .replit  README.md  build-dev.sh  dev-server.js  main.py  main.sh  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  setup.sh
src/: app.py  appTheme.py  common.py  index.html  pymui.py  pyreact.py
