[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["JennaSys <<>>"]
description = ""
name = "pytest1"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.0.0"

[tool.poetry.dev-dependencies]
Transcrypt = "^3.9.0"
