[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["JennaSys"]
description = ""
name = "pyreact"
version = "0.2.1"

[tool.poetry.dependencies]
Flask = "^1.0.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
Transcrypt = "^3.9.0"

